--- a/main.css
+++ b/main.css
@@ -5,13 +5,14 @@
 }
 
 body {
-  width: 80%;
+  width: 100%;
   margin: 0 auto;
   background-color: #ebe9e9;
   display: flex;
   align-items: center;
   justify-content: center;
   background-color: #111;
+  min-height: 100vh;
   height: 100%;
 }
 
@@ -23,7 +24,6 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  align-self: flex-start;
 }
 
 .hero .logo {
